# cc-switch-web

./: .gitignore  CHANGELOG.md  README.md  README_ZH.md  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_config.rs  config.rs  deeplink.rs  prompt_files.rs
src-tauri/src/commands/: config.rs  import_export.rs  mcp.rs  prompt.rs  provider.rs  skill.rs
src-tauri/src/services/: config.rs  mcp.rs  prompt.rs  provider.rs  skill.rs
src-tauri/src/web_api/: mod.rs
src-tauri/src/web_api/handlers/: config.rs  mcp.rs  mod.rs  providers.rs  skills.rs
src-tauri/tests/: app_type_parse.rs  import_export_sync.rs  mcp_commands.rs  prompt_service.rs  provider_service.rs  web_auth.rs  web_skills_app_support.rs
src/components/: AppSwitcher.tsx  WebLoginDialog.tsx
src/components/skills/: SkillsPage.tsx
src/config/: apps.ts
src/hooks/: useDirectorySettings.ts  useHealthCheck.ts  useSkills.ts
src/i18n/locales/: en.json  zh.json
src/lib/api/: adapter.ts  healthCheck.ts  skills.ts
src/lib/errors/: skillErrorParser.ts
tests/components/: AppSwitcher.test.tsx  WebLoginDialog.test.tsx
tests/components/skills/: SkillsPage.test.tsx
tests/hooks/: useDirectorySettings.test.tsx  useImportExport.test.tsx  useImportExport.web.test.tsx  useSettings.test.tsx  useSettingsMetadata.test.tsx  useSkills.test.tsx
tests/integration/: App.test.tsx
tests/lib/: adapter.core.test.ts  healthCheck.test.ts
tests/lib/api/: skills.test.ts
tests/lib/errors/: skillErrorParser.test.ts
tests/msw/: handlers.ts
