[package]
name = "cc-switch"
version = "0.9.0"
description = "All-in-One Assistant for Claude Code, Codex & Gemini CLI"
authors = ["Jason Young"]
license = "MIT"
repository = "https://github.com/farion1231/cc-switch"
edition = "2021"
rust-version = "1.75.0"
default-run = "cc-switch"
# 禁用自动 bin 检测，防止 Tauri 打包 cc-switch-server（需要 web-server feature）
autobins = false

# 主二进制（Tauri 桌面应用）
[[bin]]
name = "cc-switch"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cc_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["desktop"]
test-hooks = []
desktop = [
    "tauri",
    "tauri-build",
    "tauri-plugin-log",
    "tauri-plugin-opener",
    "tauri-plugin-process",
    "tauri-plugin-updater",
    "tauri-plugin-dialog",
    "tauri-plugin-store",
    "tauri-plugin-deep-link",
    "tauri-plugin-single-instance",
    "winreg",
    "objc2",
    "objc2-app-kit",
]
web-server = ["axum", "tower-http", "rust-embed", "env_logger", "mime_guess", "rand"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [], optional = true }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.11", optional = true }
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2.8.2", features = ["tray-icon", "protocol-asset"], optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-store = { version = "2", optional = true }
tauri-plugin-deep-link = { version = "2", optional = true }
dirs = "5.0"
toml = "0.8"
toml_edit = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
futures = "0.3"
regex = "1.10"
rquickjs = { version = "0.8", features = ["array-buffer", "classes"] }
thiserror = "1.0"
anyhow = "1.0"
zip = "2.2"
serde_yaml = "0.9"
tempfile = "3"
url = "2.5"
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["auth", "cors", "fs"], optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
rand = { version = "0.8", optional = true }
tower = { version = "0.4", features = ["limit"] }
base64 = "0.22"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.52", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5", optional = true }
objc2-app-kit = { version = "0.2", features = ["NSColor"], optional = true }

# Optimize release binary size to help reduce AppImage footprint
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "symbols"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }

# Web Server 作为 example 构建，避免 Tauri 打包
# 运行方式：cargo run --example server --features web-server
[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["web-server"]
